# ChangeLog for dev-texlive/texlive-latexextra
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-latexextra/ChangeLog,v 1.17 2008/05/12 20:05:59 nixnut Exp $

  12 May 2008; nixnut <nixnut@gentoo.org> texlive-latexextra-2007.ebuild:
  Stable on ppc wrt bug 220651

  16 Apr 2008; Peter Volkov <pva@gentoo.org> texlive-latexextra-2007.ebuild:
  amd64 stable, bug #215735.

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  texlive-latexextra-2007.ebuild:
  alpha/ia64/sparc stable wrt #215735

  08 Apr 2008; Jeroen Roovers <jer@gentoo.org>
  texlive-latexextra-2007.ebuild:
  Stable for HPPA (bug #215735).

  06 Apr 2008; Markus Rothe <corsair@gentoo.org>
  texlive-latexextra-2007.ebuild:
  Added ~ppc; bug #195815

  06 Apr 2008; Markus Rothe <corsair@gentoo.org>
  texlive-latexextra-2007.ebuild:
  Stable on ppc64; bug #215735

  01 Apr 2008; Christian Faulhammer <opfer@gentoo.org>
  texlive-latexextra-2007.ebuild:
  stable x86, bug 215735

  10 Feb 2008; Alexis Ballier <aballier@gentoo.org>
  texlive-latexextra-2007.ebuild:
  keyword ~x86-fbsd

  18 Dec 2007; Jeroen Roovers <jer@gentoo.org>
  texlive-latexextra-2007.ebuild:
  Marked ~hppa (bug #195815).

  22 Nov 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-latexextra-2007.ebuild:
  block dev-tex/achemso as it is also provided by texlive-latexextra, thanks
  to Rossen Apostolov for pointing that

  26 Oct 2007; Ferris McCormick <fmccor@gentoo.org>
  texlive-latexextra-2007.ebuild:
  Add ~amd64 keyword --- Bug #195815

  25 Oct 2007; Markus Rothe <corsair@gentoo.org>
  texlive-latexextra-2007.ebuild:
  Added ~ppc64; bug #195815

  25 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  texlive-latexextra-2007.ebuild:
  Add ~alpha/~ia64 wrt bug #195815

  25 Oct 2007; Ferris McCormick <fmccor@gentoo.org>
  texlive-latexextra-2007.ebuild:
  Add ~sparc keyword --- Bug #195815

  25 Oct 2007; Christian Faulhammer <opfer@gentoo.org>