@@ -501,6 +501,6 @@ DIST texlive-module-xytree-2007.zip 241918 RMD160 98cabb1dd1845d84812fca31a0cb35
 DIST texlive-module-yafoot-2007.zip 34967 RMD160 5fd805afc67879c880d554badac677562f1c1080 SHA1 ac39515ef0de4f3e00207c908ac56356e85939ab SHA256 a16daea61c288d605f0eea2bc251a05f6a70e8058de8d122c40c2f9c55a05631
 DIST texlive-module-yplan-2007.zip 19861 RMD160 9449e1f805be15178a3aa636f8ad8390294d6680 SHA1 c68601436134556bc3abd6cd696b965785d23110 SHA256 bc6d0c065d2d11df5fd7d996620be6441ad285ce709e1fef8ffb501eafdde597
 DIST texlive-module-zed-csp-2007.zip 46499 RMD160 755acbb6f72d34d567acabbfae8c71aad935d4ba SHA1 80a719e4acc6068cd61ef946b3ca8f763e9a84b4 SHA256 bc08d92331ad74119c87a5e8b9373c8c88da85ab3a99e4c402c25a388f2a3c62
-EBUILD texlive-latexextra-2007.ebuild 4831 RMD160 4c4edb99271b9a51172767d0052e195d9934946e SHA1 5017bcd9bfea3bd463d6f0a5c65b4c4acd11631d SHA256 c57dd5fac09138d71581f3940ac85af0ba753840915255aed210cd1ef1a1dbf1
-MISC ChangeLog 2426 RMD160 61db3582cff8112d6d5ee56e47bf2e6c1bba3acf SHA1 66c3b421f4d5660da34b254efe7ab6fa71b79547 SHA256 a75c7dda1645bb85e2af6bdce9281a517672b8defd614caa4f6c03a3af6f0c2a
+EBUILD texlive-latexextra-2007.ebuild 4934 RMD160 c1c270f76a335a3900216526301e090807b31219 SHA1 5047575ac81f02c78766b4a4f61e23971474069e SHA256 b16786f3e4413de6b58e4930f9cd998177ed54d4c7934be2218d378ae875fd15
+MISC ChangeLog 2871 RMD160 222a67beab2304a7f76990d652985d9a83d44495 SHA1 220bb71f3f5386fe79753b18fcd084dbacef53be SHA256 80a6c6eb5fa750c4fbe4149a7b7c34b735fbf13cc44e606ca7e7317526975a1d
 MISC metadata.xml 254 RMD160 b93e3e60f221af098c45ccb65cc5a755c4f7c964 SHA1 67ae4896c814d551e4ada1303a791b1bc84eaeb8 SHA256 78294df0a1d0e815b05f968bb43c4272d420e3025a38ea2d4fe6193a918a8e10
