@@ -1,6 +1,16 @@
 # ChangeLog for dev-texlive/texlive-latexextra
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-latexextra/ChangeLog,v 1.17 2008/05/12 20:05:59 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-latexextra/ChangeLog,v 1.19 2008/05/16 20:49:05 aballier Exp $
+
+  16 May 2008; Alexis Ballier <aballier@gentoo.org>
+  texlive-latexextra-2007.ebuild:
+  block a couple more of dev-tex packages we are providing, thanks again to
+  Horst Prote <prote@fmi.uni-stuttgart.de> in bug #222277
+
+  16 May 2008; Alexis Ballier <aballier@gentoo.org>
+  texlive-latexextra-2007.ebuild:
+  block a few more dev-tex packages that we are also providing here, thanks
+  to Horst Prote <prote@fmi.uni-stuttgart.de>, bug #222277
 
   12 May 2008; nixnut <nixnut@gentoo.org> texlive-latexextra-2007.ebuild:
   Stable on ppc wrt bug 220651
